--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ padding: 20% 5% 5% 0;
 
 @media (max-width:1100px){
   .intro-heading{
-    font-size: 4rem;
+    font-size: 3rem;
     letter-spacing: 10px;
   }
   .intro-text{
@@ -114,13 +114,13 @@ padding: 20% 5% 5% 0;
       letter-spacing: 2px;
     }
 .contact-text{
-  font-size: 0.8rem
+  font-size: 25px;
       letter-spacing: 2px;
     }
 }
 @media (max-width:650px){
   .intro-heading{
-    font-size: 3rem;
+    font-size: 2rem;
     letter-spacing: 5px;
   }
   .intro-text{
@@ -147,7 +147,7 @@ padding: 20% 5% 5% 0;
       letter-spacing: 1px;
     }
 .contact-text{
-  font-size: 0.5rem
+  font-size: 15px;
       letter-spacing: 1px;
     }
 }
